--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.14.2",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "passport": "^0.3.2",
+    "passport-fitbit-oauth2": "^1.0.1"
   }
 }
