--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "express": "^4.13.4",
+    "mongoose": "^4.4.3",
     "passport": "^0.3.2",
     "passport-fitbit-oauth2": "^1.0.1"
   }
